src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>LVR__c</fullName>
        <description>LVR Forumua Field</description>
        <formula>(acfLoan_Amount__c  /  acfApproximately_how_much_is_your_house__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>LVR Forumua Field</inlineHelpText>
        <label>LVR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Landing_Page__c</fullName>
        <formula>Source__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Landing Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Campaign_Conversion__c</fullName>
        <label>Last Campaign Conversion</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_by_Custom__c</fullName>
        <formula>LastModifiedBy.FirstName &amp; &quot; &quot; &amp; LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified by Custom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Pardot_Form_Handler_Change_Time__c</fullName>
        <description>scott needs this to track the pardot form handler change time</description>
        <label>Last Pardot Form Handler Change Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Pardot_Form_Handler_Notes__c</fullName>
        <label>Last Pardot Form Handler Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Pardot_Form_Handler__c</fullName>
        <description>Shows the last form handler completed by this lead</description>
        <label>Last Pardot Form Handler</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Refinance__c</fullName>
        <inlineHelpText>Just type the date in the box using this format 
DD/MM/YYYY
17/12/1969</inlineHelpText>
        <label>Last Refinance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_refinance_empty__c</fullName>
        <formula>ISBLANK(Last_Refinance__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last refinance empty?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadToCallFileRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LeadToCallFileRule</label>
        <referenceTo>LeadToCallFileRule__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Groups__c</fullName>
        <description>Leads are sorted into groups based on the quality of lead and how it was created. Better quality leads are tagged as Group 1, moving down the list to Group 4 which are completely cold.</description>
        <label>Lead Groups</label>
        <picklist>
            <picklistValues>
                <fullName>Group 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Finance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Name__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lender_Experience_Rating__c</fullName>
        <label>Lender Experience Rating</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lendi_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Lendi External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Loan_Deposit__c</fullName>
        <label>Loan Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Value__c</fullName>
        <label>Loan Value</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Looking_To_Buy__c</fullName>
        <label>Looking To Buy</label>
        <picklist>
            <picklistValues>
                <fullName>Within a year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In 2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 2 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <inlineHelpText>Please type in the Make/Brand of the Vehicle
This will be populated &quot;Coming Soon&quot;</inlineHelpText>
        <label>Make</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defacto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced/Separated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widow/Widower</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <inlineHelpText>Please type in the Model of the Vehicle 
This will be populated &quot;Coming Soon&quot;</inlineHelpText>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_in_last_4_Hours__c</fullName>
        <description>Has record been MODIFIED in the last 4 hours</description>
        <formula>now()-LastModifiedDate &lt; 0.16</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If ticked the record HAS been modified in the last 4 hours</inlineHelpText>
        <label>Modified in last 4 Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Lead_Status_Count__c</fullName>
        <formula>IF( ISPICKVAL( Status , &quot;Attempting Contact&quot;), 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Lead Status Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Credit_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Credit History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Show_Campaign_Old_Opp_Ref__c</fullName>
        <label>No Show Campaign Old Opp Ref</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Number_of_Children__c</fullName>
        <inlineHelpText>Number of Children living in the household, under the age of 18</inlineHelpText>
        <label>Number of Children</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OLP_Account_Created_DateTime__c</fullName>
        <label>OLP Account Created DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Paid_or_Unpaid_Defaults__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid or Unpaid Defaults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pardot_Visitor_Activities_Sum__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pardot Visitor Activities Sum</label>
        <referenceTo>Pardot_Visitor_Activities_Sum__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Annual_Income__c</fullName>
        <label>Partner Annual Income</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Super_Balance__c</fullName>
        <label>Partner Super Balance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PostCode_Number__c</fullName>
        <formula>IF(ISNUMBER(PostalCode), VALUE(PostalCode), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PostCode Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_Notes__c</fullName>
        <inlineHelpText>&quot;Enter any details here you feel are relevant to the opportunity&quot; 
This will be shown on the Brokers Appointment</inlineHelpText>
        <label>Pre Sales Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Prime_NonConforming__c</fullName>
        <formula>IF ( acfHow_is_your_current_credit_history__c  = &quot;Excellent - No Issues&quot;,&quot;Prime&quot;,&quot;Non-Conforming&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prime - NonConforming</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remove_from_Callfile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Test field - remove lead from call file</description>
        <label>Remove from Callfile?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Property_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Property Report?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Address_To_Scrape_Hero__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Address To Scrape Hero</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmitterIP__c</fullName>
        <label>Submitter IP</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sugar_Date_Created__c</fullName>
        <label>Sugar Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sugar_Lead_Source__c</fullName>
        <label>Sugar Lead Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Balance__c</fullName>
        <inlineHelpText>Enter the Individuals Super Balance</inlineHelpText>
        <label>Super Balance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Switch_Lenders_to_Lower_Repayments__c</fullName>
        <label>Switch Lenders to Lower Repayments</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_with_Bank__c</fullName>
        <label>Time with Bank</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Too_Many_Credit_Enquiries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Too Many Credit Enquiries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Calls__c</fullName>
        <label>Total Calls</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Refinance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Purchase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <label>Transaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbouncePageID__c</fullName>
        <label>Unbounce Page ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbouncePageVariant__c</fullName>
        <label>Unbounce Page Variant</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionDate__c</fullName>
        <label>Unbounce Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionTime__c</fullName>
        <label>Unbounce Submission Time</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Build_Year__c</fullName>
        <label>Vehicle Build Year</label>
        <picklist>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Loan_Amount__c</fullName>
        <label>Vehicle Loan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_Price__c</fullName>
        <label>Vehicle Price</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_sale_type__c</fullName>
        <label>Vehicle Sale Type</label>
        <picklist>
            <picklistValues>
                <fullName>Brand new</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used from a dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ex Demonstrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I don&apos;t know yet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Status__c</fullName>
        <label>Last Sync Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Result__c</fullName>
        <label>Zendesk Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zendesk_OutofSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_id__c</fullName>
        <label>Zendesk User Id</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_oldTags__c</fullName>
        <label>Zendesk_oldTags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__isCreatedUpdatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCreatedUpdatedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfAnyDebtToConsolidate__c</fullName>
        <description>Click Loans</description>
        <label>Any Debt to Consolidate?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfApproxPropertyCurrentLoanAmount__c</fullName>
        <description>Click Loans</description>
        <label>Approx Property Current Loan Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfApproximately_how_much_is_your_house__c</fullName>
        <description>Click Loans</description>
        <label>Approx House Worth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfBankNameForAccountDetails__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Bank Name For Account Details</label>
        <referenceTo>acfBank_Detail__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfBankdetailStatus__c</fullName>
        <description>Click Loans</description>
        <label>BankdetailStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfCashOutHowMuch__c</fullName>
        <description>Click Loans</description>
        <label>Cash Out How Much?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfCurrentRate__c</fullName>
        <description>Click Loans</description>
        <label>Current Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>acfDebtConsolidateHowMuch__c</fullName>
        <description>Click Loans</description>
        <label>Debt Consolidate How Much?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfDo_u_know_your_current_interest_rate__c</fullName>
        <description>Click Loans</description>
        <label>Do you know your current interest rate?</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfEmployment_Type__c</fullName>
        <description>Click Loans</description>
        <label>Employment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time - PAYG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfEstimated_Savings__c</fullName>
        <description>Click Loans</description>
        <label>Estimated Savings/Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfHowMuch__c</fullName>
        <description>Click Loans</description>
        <label>how much</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfHow_Much__c</fullName>
        <description>Click Loans</description>
        <label>How Much?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfHow_is_your_current_credit_history__c</fullName>
        <description>Click Loans</description>
        <label>How is your current credit history</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfIsCreatedViaRequestCall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Is Click Loans Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfIsMobileVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Is Mobile Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfIs_Bank_Statement_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Is Bank Statement Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfIs_Identity_Document_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Is Identity Document Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfIs_Identity_Document_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Is Identity Document Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfIs_Post_Login_Ques_Attempted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Is Post Login Ques Attempted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfIs_User_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Is User Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfJumioDateOfBirth__c</fullName>
        <description>Click Loans</description>
        <label>Date of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfJumioExpiryDate__c</fullName>
        <description>Click Loans</description>
        <label>Expiry Date</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfJumioFirstName__c</fullName>
        <description>Click Loans</description>
        <label>Jumio First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfJumioIDNumber__c</fullName>
        <description>Click Loans</description>
        <label>ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfJumioIDType__c</fullName>
        <description>Click Loans</description>
        <label>ID Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfJumioIssuingCountry__c</fullName>
        <description>Click Loans</description>
        <label>Issuing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfJumioLastName__c</fullName>
        <description>Click Loans</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfJumioStatus__c</fullName>
        <description>Click Loans</description>
        <label>Jumio Response</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfKnowaboutus__c</fullName>
        <description>Click Loans</description>
        <label>Know about us</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfLast_2_years_Tax_Return_or_ATO_NOA__c</fullName>
        <description>Click Loans</description>
        <label>Last 2 years Tax Return or ATO NOA</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfLoanDocuments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Loan Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfLoan_Amount__c</fullName>
        <description>Click Loans</description>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfOneTimePassword__c</fullName>
        <description>Click Loans</description>
        <label>One Time Password</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfPostcode__c</fullName>
        <description>Click Loans</description>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfProductLVRId__c</fullName>
        <description>Click Loans</description>
        <label>ProductLVRId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfProduct_LVR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Product LVR</label>
        <referenceTo>LVR_Rate__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfReason_for_Rejection__c</fullName>
        <description>Click Loans</description>
        <label>Reason for Rejection</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfScanReference__c</fullName>
        <description>Click Loans</description>
        <label>Scan Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfSettlement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Settlement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfWhat_is_your_current_payment_type__c</fullName>
        <description>Click Loans</description>
        <label>What is your current payment type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfWhat_is_your_postcode__c</fullName>
        <description>Click Loans</description>
        <label>What is your postcode?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfWhyAreYouRefinancing__c</fullName>
        <description>Click Loans</description>
        <label>Why are you refinancing</label>
        <picklist>
            <picklistValues>
                <fullName>Cash Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Consolidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower Rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfWhy_are_you_refinancing__c</fullName>
        <description>Click Loans</description>
        <label>Why are you refinancing?</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>To get a better rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acf_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acf_How_Much__c</fullName>
        <description>Click Loans</description>
        <label>How Much</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_Is_Identity_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Is Identity Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acf_partner_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>affiliate_source__c</fullName>
        <description>Tracking code from affiliate on source of lead</description>
        <label>affiliate_source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__AdWords_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Campaign</label>
        <referenceTo>bizible__AdWords_Campaign__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>